k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uoslife-template
  namespace: uoslife-template
  labels:
    app: uoslife-template
spec:
  replicas: 3
  selector:
    matchLabels:
      app: uoslife-template
  template:
    metadata:
      labels:
        app: uoslife-template
    spec:
      containers:
        - name: uoslife-template
          image: harbor.uoslife.com/uoslife/uoslife-template:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
      imagePullSecrets:
        - name: harbor.uoslife.com
---
apiVersion: v1
kind: Service
metadata:
  name: uoslife-template
  namespace: uoslife-template
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
      app: uoslife-template
