k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uoslife-template-ingress
  namespace: uoslife-template
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.allow-http: "false"
    nginx.org/client-max-body-size: "0"
spec:
  tls:
    - hosts:
        - api.uoslife.team
      secretName: uoslife-tls
  rules:
    - host: api.uoslife.team
      http:
        paths:
          - backend:
              service:
                name: uoslife-template
                port:
                  number: 3000
            path: /template
            pathType: Prefix
